Se agrega un ultimo hover

--- a/LandingPage.html
+++ b/LandingPage.html
@@ -36,9 +36,9 @@
             <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style="font-family: monospace; text-align: center; border-radius: 20px; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/huella22.png?raw=true);background-repeat: no-repeat; background-size: 250px; margin: 0 auto; border: 1px solid yellow">
                 <span style="color: yellow; text-align: center;"><h3><b>BenefiViaje</b></h3></span>
                 <br>
-                <b>En BenefiViajes, nos preocupamos por brindar apoyo a quienes enfrentan las dificultades de los incrementos de precios en el transporte. Somos una empresa comprometida con la comunidad, y nuestra misión es ofrecer soluciones que alivien tu bolsillo y faciliten tu movilidad diaria.
+                <p><b>En BenefiViajes, nos preocupamos por brindar apoyo a quienes enfrentan las dificultades de los incrementos de precios en el transporte. Somos una empresa comprometida con la comunidad, y nuestra misión es ofrecer soluciones que alivien tu bolsillo y faciliten tu movilidad diaria.
 
-                Con nuestro concurso, queremos brindarte la oportunidad de <span style="color: yellow">viajar gratis durante todo un año</span> en transporte público, ya sea en metro o micro, o de disfrutar de un año de uso de autopistas si tienes automóvil. Creemos que el acceso a un transporte asequible es fundamental para mejorar la calidad de vida de las personas, y por eso estamos aquí para ayudarte.</b>
+                Con nuestro concurso, queremos brindarte la oportunidad de <span style="color: yellow">viajar gratis durante todo un año</span> en transporte público, ya sea en metro o micro, o de disfrutar de un año de uso de autopistas si tienes automóvil. Creemos que el acceso a un transporte asequible es fundamental para mejorar la calidad de vida de las personas, y por eso estamos aquí para ayudarte.</b></p>
             </div>
             <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
         </div>      
@@ -77,12 +77,13 @@
         </div>
         <div id="TERMINOS" class="row row4 box1">
             <div class="col-sm-1 col-md-1 col-lg-1 col-xl-1"></div>
-            <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 text-white" style="font-size: 18px; font-family: monospace; background-image:url(https://github.com/BranCG/EVA2/blob/main/img/huella11.png?raw=true);background-repeat: no-repeat; background-size: 180px; background-position-y: 140px; background-position-x: 100px; border: 1px solid yellow;">
-                <span style="color: yellow; font-family: monospace"><h3><b>Términos y condiciones</b></h3></span>
+            <div class="col-sm-10 col-md-10 col-lg-10 col-xl-10 bg-primary p-5 textoTerminoCondi">
+                <span style="color: yellow;"><h3><b>Términos y condiciones</b></h3></span>
                 <ul>
                     <li><b>El concurso está abierto a todas las personas mayores de 18 años.</b></li>
                     <li><b>El premio incluye un año completo de transporte público en metro o bus para una persona, y un año de uso de autopistas (TAG) para quienes tengan automóvil.</b></li>
-                    <li><b>El ganador será elegido al azar entre todos los participantes elegibles.</b></li>
+                    <li><b>El ganador será elegido al azar entre todos los participantes elegibles en la fecha indicada mas abajo.</b></li>
+                    <li><b>Concurso valido solo para habitantes en territorio Chileno.</b></li>
                 </ul>
                 <br>
                 <br>
